test_suite/alan-2022-examples/failing/002280_mutation.alan
source Z begin get to1[while 1 do relax end 3] end
